Edit mode normalize fails to respect locked groups #96787

Closed
opened 2022-03-25 23:07:51 +01:00 by Daniel Salazar · 23 comments
Member

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-24 00:35, hash: 98d4872d7f

Short description of error
This bug relates to object.vertex_weight_normalize_active_vertex()

As the tooltip says, normalization should completely ignore locked groups
image.png

Exact steps for others to reproduce the error
Normalize.blend

Check the L and R groups, these are locked groups. The L group looks like this:
image.png

Now hit the Normalize operator. The result is the L group looking like this:
image.png

Video overview
Normalize.mp4

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-24 00:35, hash: `98d4872d7f` **Short description of error** This bug relates to object.vertex_weight_normalize_active_vertex() As the tooltip says, normalization should completely ignore locked groups ![image.png](https://archive.blender.org/developer/F12946924/image.png) **Exact steps for others to reproduce the error** [Normalize.blend](https://archive.blender.org/developer/F12946912/Normalize.blend) Check the L and R groups, these are locked groups. The *L* group looks like this: ![image.png](https://archive.blender.org/developer/F12946936/image.png) Now hit the *Normalize* operator. The result is the *L* group looking like this: ![image.png](https://archive.blender.org/developer/F12946942/image.png) Video overview [Normalize.mp4](https://archive.blender.org/developer/F13061923/Normalize.mp4)
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @Ethan-Hall

Added subscriber: @Ethan-Hall

First off normalization should only be applied to deforming bones. This is why the Normalize operator is only available when choosing the Deform listing options from the menu

This is not true.
The operator is only available when choosing the 'Deform' in your example since the set 'All' and 'Other' contain locked groups.
image.png

>First off normalization should only be applied to deforming bones. This is why the Normalize operator is only available when choosing the Deform listing options from the menu This is not true. The operator is only available when choosing the 'Deform' in your example since the set 'All' and 'Other' contain locked groups. ![image.png](https://archive.blender.org/developer/F12948572/image.png)
Author
Member

You're right, it's only disabled if at least one of the groups is locked. Which is also wrong.

You're right, it's only disabled if at least one of the groups is locked. Which is also wrong.

This comment was removed by @Ethan-Hall

*This comment was removed by @Ethan-Hall*
Author
Member

In #96787#1330492, @Ethan-Hall wrote:
I think the problem is that the 'Normalize' and 'Copy' are not disabled properly. They should not depend on the filter setting since they do not respect the filter setting.

The problem is, normalization on all groups even if they are non-deforming is absolutely wrong and destructive. Also, normalizing should respect locked groups, otherwise it's simply not following the normalization workflow design.

> In #96787#1330492, @Ethan-Hall wrote: > I think the problem is that the 'Normalize' and 'Copy' are not disabled properly. They should not depend on the filter setting since they do not respect the filter setting. The problem is, normalization on all groups even if they are non-deforming is absolutely wrong and destructive. Also, normalizing should respect locked groups, otherwise it's simply not following the normalization workflow design.

In #96787#1330494, @zanqdo wrote:

In #96787#1330492, @Ethan-Hall wrote:
I think the problem is that the 'Normalize' and 'Copy' are not disabled properly. They should not depend on the filter setting since they do not respect the filter setting.

The problem is, normalization on all groups even if they are non-deforming is absolutely wrong and destructive. Also, normalizing should respect locked groups, otherwise it's simply not following the normalization workflow design.

You are right It should. I just checked and 'Normalize All' in the weight paint menu allows the user to filter for deform pose bones.

> In #96787#1330494, @zanqdo wrote: >> In #96787#1330492, @Ethan-Hall wrote: >> I think the problem is that the 'Normalize' and 'Copy' are not disabled properly. They should not depend on the filter setting since they do not respect the filter setting. > > The problem is, normalization on all groups even if they are non-deforming is absolutely wrong and destructive. Also, normalizing should respect locked groups, otherwise it's simply not following the normalization workflow design. You are right It should. I just checked and 'Normalize All' in the weight paint menu allows the user to filter for deform pose bones.

From a UI perspective, the normalize and copy buttons should be attached to indicate that they respect the filter setting.

From a UI perspective, the normalize and copy buttons should be attached to indicate that they respect the filter setting.
Member

Added subscriber: @BClark

Added subscriber: @BClark
Member

Added subscriber: @nrupsis

Added subscriber: @nrupsis
Nate Rupsis self-assigned this 2022-05-20 23:23:14 +02:00

Added subscriber: @JerBot

Added subscriber: @JerBot
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Member

Calling @ideasman42 as discussed in the meeting to see if he can give us a hand with this!

Calling @ideasman42 as discussed in the meeting to see if he can give us a hand with this!

Replied to D15317.

Replied to [D15317](https://archive.blender.org/developer/D15317).
Daniel Salazar changed title from Edit mode normalize fails to respect non deforming groups or locked groups to Edit mode normalize fails to respect locked groups 2022-08-04 00:45:13 +02:00
Author
Member

Separated the non deforming groups problem into a new task #100187

Separated the non deforming groups problem into a new task #100187

This issue was referenced by 0c9749093b

This issue was referenced by 0c9749093b95f9af9ce86f8730753e1cfe215f4e

This issue was referenced by 274dc024f6

This issue was referenced by 274dc024f62c4d65cbcf6689462327068c4d2206

This issue was referenced by fb07bbb751

This issue was referenced by fb07bbb751223ddfa25ad326ae31004e5e5b96fb

This issue was referenced by 43b1624eee

This issue was referenced by 43b1624eee17f8e329450d5ac49791e69b1985a2

This issue was referenced by 87a45db522

This issue was referenced by 87a45db522e822cac922641da0eff8a42b186223

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96787
No description provided.